Added Leave Request Module for both Admin and Employee

--- a/leave-management/Views/LeaveAllocation/Details.cshtml
+++ b/leave-management/Views/LeaveAllocation/Details.cshtml
@@ -76,5 +76,5 @@
     </div>
 
     <div>
-        <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
+        <a asp-action="ListEmployees" class="btn btn-outline-secondary">Back to List</a>
     </div>
