Implemented AdminLTE Theme and added required files to project

--- a/leave-management/Views/LeaveAllocation/Index.cshtml
+++ b/leave-management/Views/LeaveAllocation/Index.cshtml
@@ -24,7 +24,7 @@
             </td>
           
             <td>
-                <a asp-action="SetLeave" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fa fa-pencil" aria-hidden="true"></i> Allocate To Employees</a> 
+                <a asp-action="SetLeave" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-user-edit" aria-hidden="true"></i> Allocate To Employees</a> 
             </td>
         </tr>
 }
