--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -34,16 +34,16 @@
                 @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
-                <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">
-                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                <a asp-action="Edit" class="btn btn-outline-warning" asp-route-id="@item.Id">
+                    <i class="fas fa-pencil-alt" aria-hidden="true"></i>
                     Edit
                 </a> 
-                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">
-                    <i class="fa fa-info-circle" aria-hidden="true"></i>
+                <a asp-action="Details" class="btn btn-outline-primary" asp-route-id="@item.Id">
+                    <i class="fas fa-info-circle" aria-hidden="true"></i>
                     Details
                 </a> 
-                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')">
-                    <i class="fa fa-trash" aria-hidden="true"></i>
+                <a asp-action="Delete" class="btn btn-outline-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')">
+                    <i class="fas fa-trash" aria-hidden="true"></i>
                     Delete
                 </a>
             </td>
