Completed this project

--- a/leave-management/Views/LeaveAllocation/Details.cshtml
+++ b/leave-management/Views/LeaveAllocation/Details.cshtml
@@ -76,5 +76,7 @@
     </div>
 
     <div>
-        <a asp-action="ListEmployees" class="btn btn-outline-secondary">Back to List</a>
+        <a class="btn btn-outline-secondary" asp-action="ListEmployees">
+            <i class="fa fa-arrow-left"></i> Back to List
+        </a>
     </div>
