--- a/leave-management/Views/LeaveRequest/Create.cshtml
+++ b/leave-management/Views/LeaveRequest/Create.cshtml
@@ -20,14 +20,14 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label asp-for="StartDate" class="control-label"></label>
-                        <input asp-for="StartDate" class="form-control datepicker" />
+                        <input asp-for="StartDate" class="form-control " id="From" />
                         <span asp-validation-for="StartDate" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
                         <label asp-for="EndDate" class="control-label"></label>
-                        <input asp-for="EndDate" class="form-control datepicker" />
+                        <input asp-for="EndDate" class="form-control " id="To" />
                         <span asp-validation-for="EndDate" class="text-danger"></span>
                     </div>
                 </div>
@@ -38,8 +38,9 @@
                 <span asp-validation-for="RequestComments" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <a asp-action="MyLeave" class="btn btn-outline-info"><i class="fa fa-arrow-left"></i> Back to List</a>
                 <input type="submit" value="Request Leave" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-info">Back to List</a>
+
             </div>
         </form>
     </div>
@@ -52,8 +53,28 @@
 @section Scripts {
     <script>
   $( function() {
-      $(".datepicker").datepicker({
-          dateFormat: "yy-mm-dd"
+      //$(".datepicker").datepicker({
+      //    dateFormat: "yy-mm-dd",
+      //    minDate: 0
+      //});
+
+      $("#From").datepicker({
+          dateFormat: "yy-mm-dd",
+          minDate: 0,
+          onSelect: function (selected) {
+              $("#To").removeAttr("disabled")
+              var dt = new Date(selected);
+              dt.setDate(dt.getDate() + 1);
+              $("#To").datepicker("option", "minDate", dt);
+          }
+      });
+      $("#To").datepicker({
+          dateFormat: "yy-mm-dd",
+          onSelect: function (selected) {
+              var dt = new Date(selected);
+              dt.setDate(dt.getDate() - 1);
+              $("#From").datepicker("option", "maxDate", dt);
+          }
       });
   });
     </script>
