--- a/leave-management/Views/LeaveRequest/MyLeave.cshtml
+++ b/leave-management/Views/LeaveRequest/MyLeave.cshtml
@@ -51,6 +51,7 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.LeaveType.Name)
+                @*@Html.DisplayFor(modelItem => item.RequestComments)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
@@ -80,7 +81,7 @@
                 }
             </td>
             <td>
-                @if ((!item.Cancelled && item.StartDate > DateTime.Now))
+                @if ((!item.Cancelled && item.StartDate >= DateTime.Now))
                 {
                     <a class="btn btn-danger" asp-action="CancelRequest" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to cancel the request? ')">
                     <i class="fa fa-trash" aria-hidden="true"></i> Cancel Request
