--- a/leave-management/Views/LeaveTypes/Delete.cshtml
+++ b/leave-management/Views/LeaveTypes/Delete.cshtml
@@ -27,7 +27,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete Record" class="btn btn-danger btn-block" /> 
-        <a asp-action="Index" class="btn btn-info">Back to List</a>
+        <a class="btn btn-outline-secondary" asp-action="Index">
+            <i class="fa fa-arrow-left"></i> Back to List
+        </a>
+        <input type="submit" value="Delete Record" class="btn btn-outline-danger btn-block" />
+
     </form>
 </div>
