--- a/leave-management/Views/LeaveTypes/Details.cshtml
+++ b/leave-management/Views/LeaveTypes/Details.cshtml
@@ -30,6 +30,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model.Id">Edit</a> 
-    <a asp-action="Index" class="btn btn-info">Back to List</a>
+    <a class="btn btn-outline-secondary" asp-action="Index">
+        <i class="fa fa-arrow-left"></i> Back to List
+    </a>
+    <a asp-action="Edit" class="btn btn-outline-warning" asp-route-id="@Model.Id">Edit</a>
+
 </div>
