--- a/leave-management/Views/LeaveTypes/Edit.cshtml
+++ b/leave-management/Views/LeaveTypes/Edit.cshtml
@@ -25,8 +25,11 @@
                 <span asp-validation-for="DefaultDays" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save Changes" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-info">Back to List</a>
+                <a class="btn btn-outline-secondary" asp-action="Index">
+                    <i class="fa fa-arrow-left"></i> Back to List
+                </a>
+                <input type="submit" value="Save Changes" class="btn btn-outline-success" />
+
             </div>
         </form>
     </div>
